Bug 360598 - Mirror tool axis behaves as if it gets snapped, when you move it around canvas
Summary: Mirror tool axis behaves as if it gets snapped, when you move it around canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2016-03-16 11:42 UTC by Raghavendra kamath
Modified: 2016-04-29 16:03 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2016-03-16 11:42:36 UTC
After the introduction of snap behaviour the mirror tool behaves weirdly , as if it is being snapped. you can take a look at a video here-> https://dl.dropboxusercontent.com/u/37777793/snap-mirror.mp4

when you move the mirror axis it starts to stutter 


Reproducible: Sometimes



Expected Results:  
the movement of the mirror axis should be smooth.
Comment 1 wolthera 2016-03-16 12:09:07 UTC
Yeah, confirmed. It is really weird as well, because it doesn't actually snap(there's no snapping at all in the code), it just wobbles around awkwardly.
Comment 2 Halla Rempt 2016-04-16 13:39:16 UTC
https://phabricator.kde.org/T2298

Release blocker because regression.
Comment 3 Scott Petrovic 2016-04-18 13:09:13 UTC
I looked at the code for this briefly to see if I could fix it ( I couldn't). The mirror tool has its own input handling with dragging and release events for the move handle -- which is the cause of the issue.

The 'jittering' is because there are mouse events that fire along with tablet events in the code and report slightly different positions. This input problem is fixed in the regular kis_input_manager, but not handled correctly for this tool. 

There are a few other areas that have this custom input management, so we might need to think of a better way to organize it to prevent duplicate code.
Comment 4 Dmitry Kazakov 2016-04-29 16:03:49 UTC
Git commit 3d152322866a64e757c1a664cc8eac41223f406a by Dmitry Kazakov.
Committed on 29/04/2016 at 15:52.
Pushed by dkazakov into branch 'master'.

Fix jumping of the mirror axis handle

The event filter should process only events that are targeted
to the canvas itself. Other widgets are not interesting for us.

Fixes T2298

M  +19   -10   libs/ui/canvas/kis_mirror_axis.cpp

http://commits.kde.org/krita/3d152322866a64e757c1a664cc8eac41223f406a