Fix jumping of the mirror axis handle

The event filter should process only events that are targeted
to the canvas itself. Other widgets are not interesting for us.

Fixes T2298
BUG:360598